deploy/1.23/control-plane/ingress/nginx/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: cno-api
  name: cno-api
spec:
  ingressClassName: nginx
  rules:
  - host: cno-api.cluster.beopenit.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cno-api
            port:
              number: 80
